[gd_scene load_steps=4 format=3 uid="uid://q5vcjmetmph7"]

[ext_resource type="Texture2D" uid="uid://cpklfymqe5unp" path="res://assets/replicate-prediction-2ypqe5z6asrmc0csp1ysz7qt10.jpg" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://dggvhtjd7o2jy" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://ba3bgm5akaen4" path="res://assets/title.png" id="2_fu7sn"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_fu7sn")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7vrkn")
expand_mode = 1

[node name="TitleImage" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -321.5
offset_top = 59.0
offset_right = 780.5
offset_bottom = 299.0
grow_horizontal = 2
texture = ExtResource("2_fu7sn")

[node name="PlayButton" type="Button" parent="."]
offset_left = 878.0
offset_top = 417.0
offset_right = 1496.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 64
text = "Jugar!"

[node name="OptionsButton" type="Button" parent="."]
offset_left = 876.0
offset_top = 604.0
offset_right = 1501.0
offset_bottom = 727.0
theme_override_font_sizes/font_size = 64
text = "Configuración
"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 882.0
offset_top = 791.0
offset_right = 1501.0
offset_bottom = 914.0
theme_override_font_sizes/font_size = 64
text = "Créditos
"
